--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,12 +9,16 @@ on:
 jobs:
   RunTests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        pyver: [ '3.9', '3.10' ]
+
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.pyver }}
           cache: 'pip' # caching pip dependencies
       - run: pip install -r requirements.txt
 
