--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Log in to the Container registry
-        uses: docker/login-action
+        uses: docker/login-action@v3.0.0
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -29,12 +29,12 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v5.3
+        uses: docker/metadata-action@v5.3.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v5.1
+        uses: docker/build-push-action@v5.1.0
         with:
           context: .
           push: true
