Try passing git tag as build argument to docker

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -48,3 +48,4 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: GIT_TAG=${{ github.ref_name }}
