--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -21,6 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # write version string into python script
+      - name: Write version string to python script
+        run: set sed -i "s|SWACC_VERSION|${{ github.ref_name }}|g" arguments_from_string.py
+
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
@@ -48,4 +52,3 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          build-args: GIT_TAG=${{ github.ref_name }}
