--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        pyver: [ '3.9', '3.10', '3.11' ]
+        pyver: [ '3.9', '3.10', '3.11', '3.12' ]
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4.2.2
 
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5.3.0
         with:
           python-version: ${{ matrix.pyver }}
           cache: 'pip' # caching pip dependencies
